Fix - contrast errors (filters, draft dataflows and error text)

--- a/frontend-service/src/ui/views/_components/Filters/Filters.module.scss
+++ b/frontend-service/src/ui/views/_components/Filters/Filters.module.scss
@@ -180,6 +180,10 @@
     padding-left: 0em;
     width: 65% !important;
 
+    label {
+      color: var(--gray-75);
+    }
+
     li {
       opacity: 0.8;
 
@@ -278,6 +282,11 @@
       white-space: nowrap;
       width: 95%;
     }
+
+    label {
+      color: var(--gray-75);
+      text-transform: capitalize;
+    }
   }
 
   .searchInput {
@@ -310,6 +319,11 @@
   .labelDown {
     font-size: 10pt !important;
     top: 50% !important;
+    color: var(--gray-75);
+  }
+
+  .label {
+    color: var(--gray-75);
   }
 }
 
